--- a/sentiment-analysis.ipynb
+++ b/sentiment-analysis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd  \n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "cols = ['sentiment','id','date','query_string','user','text']\n",
@@ -8742,36 +8742,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RT @BennettTomlin: I believe Elon Musk is killing Twitter https://t.co/jFh67tJ6RH https://t.co/i1ohbTc9Dl\n",
-      "RT @elonmusk: Tesla Superchargers almost everywhere\n",
-      "RT @_Velvet64: elon trying to explain to tesla and twitter employees that his plans got leaked by super fucking mario https://t.co/uNhVoG7S…\n",
-      "RT @OneMorePeter: Today we’re excited to share that Baillie Gifford — a world-renowned asset management firm who were early investors in Am…\n",
-      "เปิดตัวแล้ว TESLA Supercharger V3 แห่งแรกในไทย @ Central World ชั้น B1 กำลังชาร์จสูงสุด 250 kW รวม 9 สถานีชาร์จ ชาร์จรถเพียง 15 นาที วิ่งได้ระยะทางไกลสุด 308 กิโลเมตร https://t.co/vaG3p173te\n",
-      "@POTUS @elonmusk @Tesla When are you gonna address the nation on these bogus targets you shot down and the cleanup you need to do in Ohio. You better start with cleaning up east Palestine! 🤦‍♂️\n",
-      "@elonmusk @POTUS @Tesla Elon is the only person that can save the Biden regime lolol\n",
-      "RT @easterntrendco: 1/ INDIVIDUAL STOCKS\n",
+      "RT @elonmusk: Wait for it …\n",
+      "@borentar @11thJeff @elonmusk Sick lies require strong language, Law of Nature. Why would you complain about \"strong language\" but not complaining lies meant to damage Tesla &amp; Elon?\n",
+      "RT @gurgavin: $TSLA TESLA Q1 DELIVERY NUMBERS WILL BE OUT IN LESS THAN 24 HOURS \n",
       "\n",
-      "These companies are either already leading in the AI space or have their eyes on acquiring emergi…\n",
-      "Pensando seriamente em comprar um tesla branco 🤔\n",
-      "@m73b54 @darew265 @DirtyTesLa @elonmusk @Tesla From Tesla they expect EVERYTHING to ask for mouth.  They don't ask the other automakers or @...\n",
-      "_ Because?\n"
+      "ANALYST ESTIMATES \n",
+      "\n",
+      "TOTAL DELIVERIES -&gt;  421,164\n",
+      "\n",
+      "MODEL S…\n",
+      "@Tesla https://t.co/uAdA36ltjl\n",
+      "RT @elonmusk: Wait for it …\n",
+      "@Tesla April Fools!\n",
+      "@elonmusk Yeah, it can stop before colliding with an obstacle, how does it fair when the obstacle doesn't stop? Say an oncoming Tesla that crosses into the opposite lane due to avoiding a deer in the road?\n",
+      "RT @StockMKTNewz: Best performing S&amp;P 500 stocks from Q1\n",
+      "\n",
+      "Nvidia $NVDA +90.1%\n",
+      "Facebook $META +76.1%\n",
+      "Tesla $TSLA +68.4%\n",
+      "Warner Bros. Discove…\n",
+      "RT @elonmusk: Wait for it …\n",
+      "😂 https://t.co/c7bIQmPCGY\n"
      ]
     }
    ],
    "source": [
     "import tweepy\n",
-    "consumer_key = 'BAEsDIvgMfqf9x5qMVknxB3de'\n",
-    "consumer_secret = 'vQcOk34ul1oLyn6mVkhShrHf7IrX4OFRchQ6pP13iVRuot6P1d'\n",
-    "access_token = '1611033532922531840-DNon2MS8KBhJe2lVKEroUOE3Hrk3Az'\n",
-    "access_token_secret = 'ibO36GOT09sG7lCNh5882mdqPd5nLXE0RaudzHR3kpzpr'\n",
-    "bearer_token = 'AAAAAAAAAAAAAAAAAAAAANEmlAEAAAAAtmGiP9j20R7VUpE1pLQqGqjHfAs%3DpZRR007AssGyalwzrXBXmXuvRKRnaolQUgRXP43NhbGMx7fmtm'\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "consumer_key = os.getenv('API_KEY')\n",
+    "consumer_secret = os.getenv('API_KEY_SECRET')\n",
+    "access_token = os.getenv('ACCESS_TOKEN')\n",
+    "access_token_secret = os.getenv('ACCESS_TOKEN_SECRET')\n",
+    "bearer_token = os.getenv('BEARER_TOKEN')\n",
     "\n",
     "client = tweepy.Client(bearer_token)\n",
     "# auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
@@ -8788,20 +8801,6 @@
     "# tweet_details = [tweet.text for tweet in tweets]\n",
     "for tweet in tweets.data:\n",
     "    print(tweet.text)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "API KEY = BAEsDIvgMfqf9x5qMVknxB3de\n",
-    "API KEY SECRET = vQcOk34ul1oLyn6mVkhShrHf7IrX4OFRchQ6pP13iVRuot6P1d\n",
-    "vQcOk34ul1oLyn6mVkhShrHf7IrX4OFRchQ6pP13iVRuot6P1d\n",
-    "BEARER TOKEN = AAAAAAAAAAAAAAAAAAAAANEmlAEAAAAAtmGiP9j20R7VUpE1pLQqGqjHfAs%3DpZRR007AssGyalwzrXBXmXuvRKRnaolQUgRXP43NhbGMx7fmtm\n",
-    "AAAAAAAAAAAAAAAAAAAAANEmlAEAAAAAtmGiP9j20R7VUpE1pLQqGqjHfAs%3DpZRR007AssGyalwzrXBXmXuvRKRnaolQUgRXP43NhbGMx7fmtm\n",
-    "ACCESS TOKEN = 1611033532922531840-DNon2MS8KBhJe2lVKEroUOE3Hrk3Az\n",
-    "ACCESS TOKEN SECRET = ibO36GOT09sG7lCNh5882mdqPd5nLXE0RaudzHR3kpzpr"
    ]
   },
   {
