--- a/sentiment-analysis.ipynb
+++ b/sentiment-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8337,7 +8337,7 @@
     "# dropping null entries (which have occurred due to cleaning)\n",
     "clean_df = pd.DataFrame(clean_tweets, columns=['text'])\n",
     "clean_df['target'] = df.sentiment\n",
-    "clean_df = np.all(clean_df.text\n",
+    "clean_df = np.all(clean_df.text)\n",
     "for i, text in enumerate(clean_df.text):\n",
     "    if len(text) <= 1: print(i, text)\n",
     "clean_df.dropna(inplace=True)\n",
